fix: run single node cluster from gradle
- add add-opens to gradle application JVM args, otherwise ./gradlew runSingleNode doesn't work
- amend cluster readme to use :cluster:run, as runSingleNode just does a run
- amend admin readme to have simpler run locally instructions
- remove run-admin.sh script which doesn't work and isn't needed or referenced
- amend docker readme to not include connect instruction, as admin is configured to auto-connect to cluster
- reflect upgraded gradle version