@@ -20,6 +20,13 @@ plugins {
     id("com.gradleup.shadow")
 }
 
+application {
+    applicationDefaultJvmArgs = listOf(
+        "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+        "--add-opens", "java.base/java.util.zip=ALL-UNNAMED",
+    )
+}
+
 tasks {
     named<Jar>("jar") {
         manifest {
